--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <spring-boot.version>3.1.2</spring-boot.version>
         <spring-retry.version>1.3.0</spring-retry.version>
         <spring-kafka.version>2.6.2</spring-kafka.version>
+        <spring-webflux.version>3.1.2</spring-webflux.version>
     </properties>
 
     <dependencies>
@@ -113,6 +114,12 @@
                 <groupId>org.springframework.retry</groupId>
                 <artifactId>spring-retry</artifactId>
                 <version>${spring-retry.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-webflux</artifactId>
+                <version>${spring-webflux.version}</version>
             </dependency>
 
         </dependencies>
