implement kafka producer configuration

--- a/kafka/kafka-producer/pom.xml
+++ b/kafka/kafka-producer/pom.xml
@@ -7,10 +7,28 @@
         <groupId>com.ft</groupId>
         <artifactId>kafka</artifactId>
         <version>0.0.1-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>kafka-producer</artifactId>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>com.ft</groupId>
+            <artifactId>app-config-data</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.ft</groupId>
+            <artifactId>kafka-model</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.ft</groupId>
+            <artifactId>kafka-admin</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.confluent</groupId>
+            <artifactId>kafka-avro-serializer</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
