--- a/app-config-data/pom.xml
+++ b/app-config-data/pom.xml
@@ -6,17 +6,10 @@
 		<groupId>com.ft</groupId>
 		<artifactId>microservices-demo</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
-		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
-	<artifactId>app-config-data</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>app-config-data</name>
-	<description>app-config-data</description>
 
-	<properties>
-		<java.version>11</java.version>
-	</properties>
+	<artifactId>app-config-data</artifactId>
 
 	<dependencies>
 		<dependency>
@@ -25,14 +18,12 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<scope>provided</scope>
 		</dependency>
-
-
-
 	</dependencies>
+
 
 	<build>
 		<plugins>
@@ -40,7 +31,7 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
-
+					<skip>true</skip>
 				</configuration>
 			</plugin>
 		</plugins>
