--- a/kafka/kafka-model/pom.xml
+++ b/kafka/kafka-model/pom.xml
@@ -7,11 +7,9 @@
         <groupId>com.ft</groupId>
         <artifactId>kafka</artifactId>
         <version>0.0.1-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>kafka-model</artifactId>
-    <packaging>pom</packaging>
 
     <dependencies>
         <dependency>
@@ -22,6 +20,13 @@
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.avro</groupId>
                 <artifactId>avro-maven-plugin</artifactId>
