--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
         <module>common-config</module>
         <module>kafka-to-elastic-service</module>
         <module>elastic</module>
+        <module>elastic/elastic-query-client</module>
     </modules>
 
     <parent>
@@ -116,6 +117,11 @@
             <dependency>
                 <groupId>com.ft</groupId>
                 <artifactId>elastic-index-client</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.ft</groupId>
+                <artifactId>elastic-query-client</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
