add Elastic search repo and common-util module

--- a/elastic/elastic-query-client/pom.xml
+++ b/elastic/elastic-query-client/pom.xml
@@ -25,6 +25,10 @@
             <groupId>com.ft</groupId>
             <artifactId>elastic-model</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.ft</groupId>
+            <artifactId>common-util</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
