--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>kafka-to-elastic-service</module>
         <module>elastic</module>
         <module>elastic/elastic-query-client</module>
+        <module>common-util</module>
     </modules>
 
     <parent>
@@ -127,6 +128,11 @@
             <dependency>
                 <groupId>com.ft</groupId>
                 <artifactId>common-config</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.ft</groupId>
+                <artifactId>common-util</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
