--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>elastic-query-web-client-common</module>
         <module>elastic-query-service</module>
         <module>elastic-query-web-client</module>
+        <module>reactive-elastic-query-service</module>
     </modules>
 
     <parent>
