--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>elastic-query-service</module>
         <module>elastic-query-web-client</module>
         <module>reactive-elastic-query-service</module>
+        <module>reactive-elastic-query-web-client</module>
     </modules>
 
     <parent>
