--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>elastic-query-web-client</module>
         <module>reactive-elastic-query-service</module>
         <module>reactive-elastic-query-web-client</module>
+        <module>kafka-streams-service</module>
     </modules>
 
     <parent>
@@ -272,6 +273,22 @@
                 <groupId>org.elasticsearch.client</groupId>
                 <artifactId>elasticsearch-rest-high-level-client</artifactId>
                 <version>${elastic-high-level-client.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.kafka</groupId>
+                <artifactId>kafka-streams</artifactId>
+                <version>3.5.1</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.kafka</groupId>
+                <artifactId>kafka-clients</artifactId>
+                <version>3.5.1</version>
+            </dependency>
+            <dependency>
+                <groupId>io.confluent</groupId>
+                <artifactId>kafka-streams-avro-serde</artifactId>
+                <version>5.5.1</version>
             </dependency>
 
         </dependencies>
